fixed padding for tablet and mobile and other changes

--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -25,3 +25,6 @@
     </button>
   </div>
   
+  <div class="carousel-explanation">
+    * The first 3 sites in the carousel are the result of my collaboration with the Freetimers team, where I worked on developing the frontend using Foundations, SCSS, HTML, and other technologies to ensure a smooth and responsive user experience. I was responsible for implementing interfaces and optimizing design for better performance across devices.
+  </div>
