--- a/src/app/carousel/carousel.component.scss
+++ b/src/app/carousel/carousel.component.scss
@@ -1,3 +1,9 @@
 .carousel-item img {
     height: 300px;
   }
+
+.carousel-explanation{
+  padding-top: 1rem;
+  font-size: 12px;
+  text-align: center;
+}
