changed years of experience and text above the carousel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="title-section">
     <h2>Full-Stack Development Made Simple</h2>
-    <p>With over seven years of experience as a web developer, I am dedicated to helping you create, enhance, and
+    <p>With over nine years of experience as a web developer, I am dedicated to helping you create, enhance, and
       maintain your dream project.</p>
   </div>
   <div class="skills-section">
