--- a/src/app/carousel/carousel.component.scss
+++ b/src/app/carousel/carousel.component.scss
@@ -1,8 +1,13 @@
 .carousel-item img {
-    height: 300px;
-  }
+  height: 300px;
+}
 
-.carousel-explanation{
+.carousel-detail {
+  padding: 0 0 2rem 0;
+  text-align: center;
+}
+
+.carousel-explanation {
   padding-top: 1rem;
   font-size: 12px;
   text-align: center;
