--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -141,16 +141,29 @@
     <div class="col-md-6" style="text-align: center;">
       <img src="assets/pic1.jpg" class="rounded-circle" style="width: 40%;" alt="Round image">
     </div>
-    <div class="col-md-6" style="padding-left: 5rem; padding-right: 5rem; text-align: center;
-    padding-top: 2rem;">
-      <h3>I'm Madalina, and I'd love to work on your next projects</h3>
+
+    <div class="col-md-6" style="padding-left: 4rem; padding-right: 4rem; text-align: center;">
+      <h3>I'm Madalina, excited to work on your next project</h3>
       <br>
-      <p>I love working with others to create beautiful web apps. Also I can help you solve or improve your .NET apps.
+
+      <p class="intro-text">
+        I love creating simple, user-friendly web apps and turning ideas into reality.
+        <br>
+        Check out some of my work on
+        <a href="https://github.com/madalinabuu" target="_blank" class="github-inline">
+          <i class="bi bi-github"></i> GitHub
+        </a>.
+        <br>
+        If you think we'd make a great team, feel free to send me an email! 💛
       </p>
-      <br>
-      <a href="mailto:madalina.ciucioiu@gmail.com" class="btn btn-info">Send Email</a>
+      <a href="mailto:madalina.ciucioiu@gmail.com" class="btn btn-info email-btn">
+        <i class="bi bi-envelope-fill"></i> Send Email
+      </a>
     </div>
   </div>
+
+
+
 </div>
 
 <div class="work-section">
@@ -159,9 +172,10 @@
 
 <div class="container">
   <div class="conclusion-section">
-    <p> Thank you for taking the time to explore my portfolio. I would love the opportunity to discuss your exciting projects and how my skills and experience could contribute to their success. </p>
-    
+    <p> Thank you for taking the time to explore my portfolio. I would love the opportunity to discuss your exciting
+      projects and how my skills and experience could contribute to their success. </p>
+
     <p>If you're interested, feel free to
-    download my CV  by clicking <a href="assets/my-cv.pdf" download>here</a>.</p>
+      download my CV by clicking <a href="assets/my-cv.pdf" download>here</a>.</p>
   </div>
 </div>
