added home and about components and small fixes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -91,6 +91,11 @@ body {
                 text-align: center;
                 padding-left: 1rem;
                 padding-right: 1rem;
+
+                h1{
+                    font-weight: 700;
+                    margin-bottom: 1.5rem;
+                }
             }
             .skills-section {
                 .skill-box {
