--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,33 +1,40 @@
-<div class="carousel-detail">Discover more — click an image in the carousel to visit the live site.</div>
+<div class="carousel">
 
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-  <!-- Slide-uri -->
-  <div class="carousel-inner">
-    <div *ngFor="let item of carouselItems; let i = index" [class.active]="i === 0" class="carousel-item">
-      <div class="row">
-        <div *ngFor="let link of item.links" class="col-12 col-md-4">
-          <a *ngIf="link.href" [href]="link.href" target="_blank">
-            <img [src]="link.imgSrc" class="d-block w-100 mb-3 mb-md-0" [alt]="link.alt">
-          </a>
-          <img *ngIf="!link.href" [src]="link.imgSrc" class="d-block w-100" [alt]="link.alt">
+
+  <div class="carousel-detail">Discover more — click an image in the carousel to visit the live site.</div>
+
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <!-- Slide-uri -->
+    <div class="carousel-inner">
+      <div *ngFor="let item of carouselItems; let i = index" [class.active]="i === 0" class="carousel-item">
+        <div class="row">
+          <div *ngFor="let link of item.links" class="col-12 col-md-4">
+            <a *ngIf="link.href" [href]="link.href" target="_blank">
+              <img [src]="link.imgSrc" class="d-block w-100 mb-3 mb-md-0" [alt]="link.alt">
+            </a>
+            <img *ngIf="!link.href" [src]="link.imgSrc" class="d-block w-100" [alt]="link.alt">
+          </div>
         </div>
       </div>
     </div>
+
+    <!-- Butoane de control -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
 
-  <!-- Butoane de control -->
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-
-<div class="carousel-explanation">
-  * The first 3 sites in the carousel are the result of my collaboration with the Freetimers team, where I worked on
-  developing the frontend using Foundations, SCSS, HTML, and other technologies to ensure a smooth and responsive user
-  experience. I was responsible for implementing interfaces and optimizing design for better performance across devices.
+  <div class="carousel-explanation">
+    * The first 3 sites in the carousel are the result of my collaboration with the Freetimers team, where I worked on
+    developing the frontend using Foundations, SCSS, HTML, and other technologies to ensure a smooth and responsive user
+    experience. I was responsible for implementing interfaces and optimizing design for better performance across
+    devices.
+  </div>
 </div>
