--- a/src/app/carousel/carousel.component.scss
+++ b/src/app/carousel/carousel.component.scss
@@ -1,14 +1,24 @@
+.carousel {
+  padding-top: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 2rem;
+}
+
 .carousel-item img {
-  height: 300px;
+  height: 350px;
+  border-radius: 5%;
 }
 
 .carousel-detail {
   padding: 0 0 2rem 0;
   text-align: center;
+  font-size: 1.1rem;
+  font-weight: bold;
 }
 
 .carousel-explanation {
-  padding-top: 1rem;
+  padding: 1rem 1.5rem;
   font-size: 12px;
   text-align: center;
 }
