--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -18,15 +18,16 @@
 .main-nav a:hover,
 .main-nav a.active-link {
   color: #cbaacb;
+  font-weight: bolder !important;
 }
 
 .main-nav a.active-link::after,
 .main-nav a:hover::after {
   content: '';
   position: absolute;
-  bottom: -4px;   // distanța sub text
+  bottom: -4px;
   left: 0;
   width: 100%;
-  height: 2px;    // grosimea liniei
+  height: 2px;
   background-color: #cbaacb;
 }
