--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,23 +4,24 @@
     <img src="assets/pic1.jpg" class="rounded-circle" style="width: 40%;" alt="Round image">
   </div>
 
-  <div class="col-md-6" style="padding-left: 4rem; padding-right: 4rem; text-align: center;">
-    <h3>I'm Madalina, excited to work on your next project</h3>
-    <br>
-
-    <p class="intro-text">
-      I love creating simple, user-friendly web apps and turning ideas into reality.
+  <div class="col-md-6">
+    <div class="details">
+      <h4>I'm Madalina, excited to work on your next project</h4>
       <br>
-      Check out some of my work on
-      <a href="https://github.com/madalinabuu" target="_blank" class="github-inline">
-        <i class="bi bi-github"></i> GitHub
-      </a>.
-      <br>
-      If you think we'd make a great team, feel free to send me an email! 💛
-    </p>
-    <a href="mailto:madalina.ciucioiu@gmail.com" class="btn btn-info email-btn">
-      <i class="bi bi-envelope-fill"></i> Send Email
-    </a>
+      <p class="intro-text">
+        I love creating simple, user-friendly web apps and turning ideas into reality.
+        <br>
+        Check out some of my work on
+        <a href="https://github.com/madalinabuu" target="_blank" class="github-inline">
+          <i class="bi bi-github"></i> GitHub
+        </a>.
+        <br>
+        If you think we'd make a great team, feel free to send me an email! 💛
+      </p>
+      <a href="mailto:madalina.ciucioiu@gmail.com" class="btn btn-info email-btn">
+        <i class="bi bi-envelope-fill"></i> Send Email
+      </a>
+    </div>
   </div>
 </div>
 
