fixed about-me not compact version

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,10 +1,10 @@
 <!-- Compact VERSION (About Page) -->
 <div *ngIf="compact" class="about compact row">
-  <div class="col-md-6" style="text-align: center;">
+  <div class="col-lg-6 col-md-12" style="text-align: center;">
     <img src="assets/pic1.jpg" class="rounded-circle" style="width: 40%;" alt="Round image">
   </div>
 
-  <div class="col-md-6">
+  <div class="col-lg-6 col-md-12">
     <div class="details">
       <h4>I'm Madalina, excited to work on your next project</h4>
       <br>
